<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation = "vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_wegmans"
        android:gravity = "center"
        android:textSize = "60sp"
        android:layout_marginTop = "50dp"
        />
    <EditText
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        android:hint = "@string/enter_your_name"
        android:layout_marginTop = "40dp"
        android:id = "@+id/name"
        android:layout_marginLeft = "25dp"
        android:layout_marginRight = "25dp"/>
    <Button
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:gravity = "center"
        android:layout_gravity = "center"
        android:text = "@string/start_list"
        android:layout_marginTop = "20dp"
        android:id = "@+id/button"
        android:textSize = "20sp"
        />
</LinearLayout>